fixed nav bar text wrap, added custom 404 page, updated home page

--- a/components/headers/MinimalHeader.module.scss
+++ b/components/headers/MinimalHeader.module.scss
@@ -156,6 +156,7 @@ $side-group-span: 5;
 .sectionTitle {
   display: block;
   position: absolute;
+  width: max-content;
   left: 105px;
   line-height: 19px;
   top: 8px;
