--- a/components/sections/cards/SectionListCard.module.scss
+++ b/components/sections/cards/SectionListCard.module.scss
@@ -50,6 +50,6 @@
 .article {
   @include media('<tablet') {
     @include flex-col;
-    flex: 1;
+    flex: 2;
   }
 }
